fix align issue

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ body {
   font-weight:700 !important;
   font-size: 14px;
 }
-.MuiDataGrid-columnHeaderTitle:first-child{
+.ticket-cell .MuiDataGrid-columnHeaderTitle:first-child{
   margin-left: 31px;
 }
 .MuiDataGrid-columnHeaderTitle{
